--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,7 @@
 {
-  "workspace": [
-    "./packages/akamas",
-    "./packages/typescript-transformer",
-    "./packages/rollup-plugin"
-  ],
+  "workspace": ["packages/*"],
   "imports": {
-    "@biomejs/biome": "npm:@biomejs/biome@^2.1.2",
-    "@std/assert": "jsr:@std/assert@1"
+    "@biomejs/biome": "npm:@biomejs/biome@^2.1.2"
   },
   "nodeModulesDir": "auto"
 }
